tests/snapshots/eval__redeclaration__const_then_var_same_scope.snap
---
source: tests/eval.rs
expression: "run(\"const x = 1\\nvar x = 2\")"
---
Err(
    EvalError {
        category: Name,
        message: "`x` is already defined in this scope",
        span: Span {
            start: 12,
            end: 21,
        },
        cause: None,
    },
)
