tests/snapshots/eval__redeclaration__var_then_const_same_scope.snap
---
source: tests/eval.rs
expression: "run(\"var x = 1\\nconst x = 2\")"
---
Err(
    EvalError {
        category: Name,
        message: "`x` is already defined in this scope",
        span: Span {
            start: 10,
            end: 21,
        },
        cause: None,
    },
)
