tests/snapshots/eval__redeclaration__var_then_var_same_scope.snap
---
source: tests/eval.rs
expression: "run(\"var x = 1\\nvar x = 2\")"
---
Err(
    EvalError {
        category: Name,
        message: "`x` is already defined in this scope",
        span: Span {
            start: 10,
            end: 19,
        },
        cause: None,
    },
)
